--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a class="bott" href="https://dino8512.github.io/">home</a>
         <a class="bott" href="https://dino8512.github.io/about/">about me</a>
         <a class="bott" href="https://dino8512.github.io/favorite/">favorite</a>
-        <a class="bott" href="https://dino8512.github.io/connect/">connect</a>
+        <a class="bott" href="https://dino8512.github.io/connect/">contact</a>
     </div>
     <div>
         <h1 class="quote">1.玩電動</h1>
